fix details wrapping

--- a/blog/blog.css
+++ b/blog/blog.css
@@ -105,19 +105,22 @@ main {
 }
 
 .details {
-	font-size: 1em;
+	font-size: 0.9em;
 	color: var(--dark-color);
 	text-align: end;
 	font-family: var(--body-font);
-	line-height: 0.5em;
-	border-right: solid;
-	border-right-color: var(--gold-color);
+	line-height: 1.4;
+	border-right: solid var(--gold-color);
 	padding-right: 1.5em;
 	height: 100%;
+	overflow-wrap: break-word;
+	word-break: break-word;
+	max-width: 100%;
 }
 
 .details p:first-child {
 	font-size: 1.2em;
+	margin-bottom: 0.3em;
 }
 
 .content {
